<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/gproyectos_background"
    android:padding="15dp" >

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/general_proyecto_nombre"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/subtitulo_txt" />

    <TextView
        android:id="@+id/txtJp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/general_proyecto_jefeproyecto"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/subtitulo_txt" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/general_proyecto_estado"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/subtitulo_txt" />

</LinearLayout>