<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp"  >
    
        <TextView
            android:id = "@+id/listActs_act"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cronograma_actividad"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/subtitulo_txt" />

        <TextView
            android:id = "@+id/listActs_wbs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cronograma_wbs"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/subtitulo_txt" />

        <TextView
            android:id = "@+id/listActs_dur"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cronograma_actividad_duration"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/subtitulo_txt" />

</LinearLayout>