<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gproyectos_background"
    android:orientation="vertical" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	    <Button
		    android:id="@+id/btnVerGantt"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:text="Ver Gantt"
			android:enabled="false"
			android:layout_marginTop="5dip">
		</Button>
		
	    <Button
		    android:id="@+id/cr_btnGuardarCambios"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:text="Guardar cambios"
			android:enabled="false"
			android:layout_marginTop="5dip">
		</Button>
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titulo_txt"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cronograma_actividad"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/blanco" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cronograma_wbs"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/blanco" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cronograma_actividad_duration"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <com.markupartist.android.widget.PullToRefreshListView
        android:id="@+id/lvActividades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>