<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.50"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/general_login_mayusculas"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/titulo_txt" />

            <EditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/login_input_bg_selector"
                android:hint="@string/general_login_username"
                android:inputType="textVisiblePassword"
                android:paddingBottom="5dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_input_bg_selector"
                android:hint="@string/general_login_password"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <com.dp2.gproyectos.view.components.BotonIconTexto
                android:id="@+id/btnInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center" >
            </com.dp2.gproyectos.view.components.BotonIconTexto>
        </LinearLayout>
    </LinearLayout>

</ScrollView>